test/functions/default-arguments/default-argument-out.good
default-argument-out.chpl:2: error: non-lvalue actual is passed to 'out' formal 'x' of foo()
