test/functions/default-arguments/default-argument-out.chpl
proc foo(out x = 7) { x = 17; writeln(x); }
foo();
